2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_frame): Support rounded corners correctly.

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_extension):
	- Set the corners correctly in the widget parameters
	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_tab):
	- Use the corners value from the parameters

	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_draw_button_gloss), (clearlooks_glossy_draw_button):
	- removed fill option from clearlooks_draw_button_gloss

2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
	- Don't use parentbg, but always bg[STATE]

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap):
	- Fill the notebook background with bg[NORMAL]

2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_spinbutton),
	(clearlooks_draw_optionmenu), (clearlooks_draw_separator):
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_button):
	- Add some cairo_save/restore pairs
	- clearlooks_draw_option_menu now uses the separator routine
	- draw_spinbutton and optionmenu used the fact that drawing the
	button modified the cairo context.
	- pixel align the end of the separator lines

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	- Make the progressbar clipbox larger by one pixel to leave space
	for the shadow.

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- Set x/ythickness for GtkSeparator to 2, otherwise they may get
	clipped.

2006-11-24  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	- replace cairo_set_source_rgb with ge_cairo_set_color where possible.

2006-11-24  Benjamin Berg  <benjamin@sipsolutions.net>
