@@ -1,3 +1,9 @@
+2006-11-28  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_box):
+	- Draw Evolution ETree headers as headers instead of buttons.
+
 2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
